--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,11 @@
-.vscode/**
-.vscode-test/**
-src/**
-.gitignore
-.yarnrc
-**/tsconfig.json
-**/.eslintrc.json
 **/*.map
 **/*.ts
+**/.eslintrc.json
+**/tsconfig.json
+.gitignore
+.vscode-test/
+.vscode/
+.yarnrc
+build/
+sample/
+src/
